# Bot_BN_BBit

./: .env.example  .gitignore  Cargo.toml  README.md  бот на Rust4.md
.github/workflows/: ci.yml
analyst/: analyst.py  requirements.txt
analyst/phase3/: auto_apply.py  shadow.py
book-collector/: collector.py
config/: analyst.toml  config.toml  edge_profile.toml  symbols.toml
crates/executor-bin/: Cargo.toml
crates/executor-bin/src/: main.rs
crates/executor-core/: Cargo.toml
crates/executor-core/src/: bybit.rs  lib.rs  position.rs  receiver.rs  risk.rs  safe_mode.rs
crates/observer-bin/: Cargo.toml
crates/observer-bin/src/: main.rs
crates/observer-core/: Cargo.toml
crates/observer-core/src/: binance.rs  bybit.rs  entry.rs  lag.rs  lib.rs  math.rs  publisher.rs
crates/panel/: Cargo.toml
crates/panel/src/: main.rs
crates/replay/: Cargo.toml
crates/replay/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs  packet.rs  packet_log.rs  registry.rs  time.rs  validation.rs  zenoh_ipc.rs
crates/telegram-alerts/: Cargo.toml
crates/telegram-alerts/src/: main.rs
deploy/: RUNBOOK.md  docker-compose.yml
deploy/systemd/: analyst.service  book-collector.service  control-panel.service  executor.service  observer.service  telegram-alerts.service
docs/: README.md
docs/adr/: 001-lag-pipeline.md  002-deploy-topology.md
research/: README.md
research/collector/: collector.py  requirements.txt
research/edge_report/: analyze.py  summary.md
scripts/: build.ps1  run_edge_research.ps1  run_mono_node.ps1
