[workspace]
members = [
    "crates/shared",
    "crates/observer-core",
    "crates/executor-core",
    "crates/observer-bin",
    "crates/executor-bin",
    "crates/panel",
    "crates/replay",
    "crates/telegram-alerts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
prometheus = "0.13"
crossbeam-queue = "0.3"
simd-json = "0.13"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
proptest = "1"
zenoh = "1.0"
