[package]
name = "executor-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "executor"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
executor-core = { path = "../executor-core" }
observer-core = { path = "../observer-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
