[package]
name = "executor-core"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
tracing = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde_json = "1"
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
simd-json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
