[package]
name = "observer-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "observer"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
observer-core = { path = "../observer-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
