[package]
name = "panel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "control-panel"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = "1"
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
