[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
zenoh = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
